workout radius distro problem

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -114,7 +114,7 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 \chapter{Alcune caratteristiche della popolazione di esopianeti}
 }
 
-\begin{wrapfigure}[13]{l}{0.45\textwidth}
+\begin{wrapfigure}[14]{l}{0.55\textwidth}
 \includegraphics[trim={0cm 0 0 0},clip, width=0.4\textwidth]{obsMa}\label{fig:Maplot}
 \caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018}.}
 \end{wrapfigure}
@@ -188,6 +188,21 @@ fig 2.6,fig 2.18
 \end{subfigure}
 \end{figure}
 
+
+
+Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
+
+\begin{workout}[multplanet system: mean motion resonances, orbital spacing,...]
+dynamical classification (barnes 08): tidal dominated if ($a<0.1$), resonant dom. if one resonant argument librates, secular otherwise.
+Many systems are found dyn full and stability: packed planetary system hypothesis (Barnes Quinn 04, Barnes Raymond 04, Raymond Barnes 05, Raymond 06), orbital stability for closely packed (smith lissauer 09), outer solar system is very stable and dyna full (Levinson duncan 93, inner is less stable but dyna full (sussman wisdom 92, laskar 94)
+n-body integration-orbit fitting: deprojected mass and relative inclination
+perryman pg 38
+Interazione n-body protopianeti vs evoluzione a lungo termine: i pianeti arrivano a risonanze attraverso migrazione
+Kepler: latham 11 (first comparison of kepler planet), burke 14
+wright09: ten multiplanet sysytem and systematic
+Winn, Fabricky 15
+fig 2.30 pg 39 Perrymann
+(ford rasio 08: dynamical outcomes of PP scattering)
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
@@ -201,19 +216,6 @@ fig 2.6,fig 2.18
 \caption{Da \cite{wright09}}
 \end{subfigure}
 \end{figure}
-
-Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
-
-\begin{workout}[multplanet system: mean motion resonances, orbital spacing,...]
-perryman pg 38
-Interazione n-body protopianeti vs evoluzione a lungo termine: i pianeti arrivano a risonanze attraverso migrazione
-Kepler: latham 11 (first comparison of kepler planet), burke 14
-wright09: ten multiplanet sysytem and systematic
-Winn, Fabricky 15
-fig 2.30 pg 39 Perrymann
-(ford rasio 08: dynamical outcomes of PP scattering)
-\begin{figure}[!ht]\includegraphics[keepaspectratio,width=\textwidth]{exoresonance}\end{figure}
-
 \end{workout}
 
 \begin{workout}[eccentricity distro: occurrence and architecture]
@@ -224,13 +226,14 @@ smaller planets tend to have lower e (hogg 10 raccomanded modelling e distro on 
 \end{workout}
 
 
-\section{Modelli planetarii}
-
-
 \section{Popolazione esopianeti rilevati tramite transito}
 
+\begin{workout}[radius distro]
+Local maximum at $1\mjupiter{}$, flat distro in log(r) between $4-10\mearth{}$ below strong increase, at $1.7\mearth{}$ local minimum separating super-earth from sub-neptune
+\end{workout}
+
 \begin{figure}[!ht]
-\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=\textwidth]{freqvsRpl50d}
+\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}
 \end{figure}
 
 \begin{workout}[transit distro observed refs]
