--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -13,6 +13,10 @@ Theoretical models of planetary system formation: mass vs. semi-major axis	(alib
 
 \section{Modello disco di accrescimento e distribuzione condizioni iniziali}
 
+\begin{workout}[viscosit\'a disco]
+Nella popolazione planetaria simulata $\alpha$ \'e fissato sulla base delle osservazioni  ed \'e omogeneo e costante.
+\end{workout}
+
 \begin{workout}[Modello di disco di accrescimento - (Mordasini18: 4) - Introduzione descrizione fenomeni grazie a PPS]
 Refs: garaud lin 07, chiang goldreich 97
 Un modello di disco  di accrescimento usato nelle simulazioni considera l'evoluzione della densit\'a superficiale tramite l'equazione \eqref{eq:diskaccrphev-m18}
