--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -10,12 +10,11 @@ Chronology of  early stages: apai lauretta 10 (book)
 
 \section{Modello disco di accrescimento}
 
+Nei modelli unidimensionali per disco di accrescimento si parametrizza viscosit\'a tramite $\nu=\frac{\eta}{\rho}\to\alpha c_s H$: giustifico euristicamente la parametrizzazione della viscosit\'a del disco di accrescimento in analogia alla viscosit\'a molecolare (\cite{bouvier2002theory}).
+cio\'e che:
 \begin{workout}[Strees tensor]
 appendix a pg 66 planet formation and migration vs crida PHD torque calculation pg 24
 \end{workout}
-
-Nei modelli unidimensionali per disco di accrescimento si parametrizza viscosit\'a tramite $\nu=\frac{\eta}{\rho}\to\alpha c_s H$: giustifico euristicamente la parametrizzazione della viscosit\'a del disco di accrescimento in analogia alla viscosit\'a molecolare (\cite{bouvier2002theory}).
-cio\'e che:
 \begin{workout}[Stress tensor in keplerian disk: crida PHD]
 pg 26
 \begin{align}
@@ -69,19 +68,25 @@ Per semplicit\'a si parametrizza il trasporto di momento angolare ponendo $\nu=\
 \PDy{t}{\Sigma}=3\frac{1}{r}\PDof{r}[r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]\label{eq:sigmaevol}
 \end{equation}
 
-Nella popolazione planetaria simulata $\alpha$ \'e fissato sulla base delle osservazioni  ed \'e omogeneo e costante.
+auto gravitazione trascurabile quindi la struttura verticale \'e determinata dalla componente lungo z dell'attrazione del corpo centrale, profilo termico determinato da equilibrio.
+
+\begin{workout}[Struttura verticale del disco]
+Pressione gas determinata da equilibrio idrostatico
+\end{workout}
 
 \begin{workout}[Viscous/turbulent disk]
 laminar (high momentum diffusion)
 mass inflow Gullbring98 \SIrange{e-9}{e-7}{\per\year}$\msun{}$
 \end{workout}
-
-
 \begin{workout}[MRI]
 fig 10.3:
 gammie 1996
 \end{workout}
 
+\begin{workout}[alpha prescription]
+$\vec{v}=(u_r,r\Omega)$, stress tensor $\sigma_{r\phi}=-\Sigma\exv{u_ru_{\phi}}$.
+Enhanced turbulent viscosity: $-\Sigma\exv{u_ru_{\phi}}=\Sigma\nu r\TDy{r}{\Omega}$, $\nu=v_TH$, $\alpha=v_T/c_s$
+\end{workout}
 
 \begin{workout}[Accretion disk sources]
 o218, 296: disk formation, constrains from solar system
@@ -92,28 +97,15 @@ the alpha disk pg 18: theory of turbulent accretion disk
 
 \end{workout}
 
-
-\begin{workout}[Intro a disco accrescimento]
-Nei modelli globali la formazione planetaria \'e simulata partendo dalla fase finale di accrescimento di massa sulla stella centrale (per semplicit\'a considero stelle di $1\msun{}$ singole): il collasso di nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
-L'ipotesi su cui si basano le simulazioni considerata \'e che la componente polverosa formi corpi pi\u massicci fino a masse di frazioni di masse terrestri  ed infine accrescere gas: lo scenario di core accretion (CA).
-\end{workout}
-
-\begin{workout}[Modelli 1D disco accrescimento: struttura verticale]
-auto gravitazione trascurabile quindi la struttura verticale \'e determinata dalla componente lungo z dell'attrazione del corpo centrale, profilo termico determinato da equilibrio.
-\end{workout}
-
 \begin{workout}[Descrizione trasporto momento angolare tramite parametrizzazione viscosit\'a]
 Mass conservation + momentum conservation in viscous flow: angular momentum evolution. Phenomena: Shear viscosity - turbulence - MRI.
 Nei modelli 1D per disco di accrescimento si parametrizza viscosit\'a tramite $\nu=\frac{\eta}{\rho}\to\alpha c_s H$: la viscosit\'a molecolare \'e troppo bassa  per trasportare all'esterno il momento angolare sui tempi-scala osservati.
-
 Theory of turbulent accretion disk: pg 18, 8.
 Flusso di x-momentum lungo y $\rho\exv{u_xu_y}$, dove considero la velocit\'a dell'elemento di fluido $(v_x+u_x,u_y)$ dove le $u$ rappresentano fluttuazioni della velocit\'a: $\sigma_{xy}=-\rho\exv{u_xu_y}$.
 Ricordando la definizione di tensore degli stress e con $\vec{v}=v_x(y)\hat{x}$
-
 \begin{equation}
 \sigma_{ij}=\eta(\partial_jv_i+\partial_iv_j-\frac{2}{3}\delta_{ij}\partial_kv_k+\zeta\delta_{ij}\partial_kv_k \to \eta\TDy{y}{v_x}
 \end{equation}
-
 \begin{equation}
 \PDof{t}(\rho v_i)+\PDof{x_i}(\rho v_iv_j+T_{ij})=F_i
 \end{equation}
@@ -126,13 +118,9 @@ Turbulence: Reynpold stress $\tau_{ij}=-\rho\exv{v_jv_i}$, $\exv{u_iu_j}=-\nu_T\
 \end{workout}
 
 \begin{workout}[Photoievaporation: X-EUV-FUV (Alexander13: The Dispersal of Protoplanetary Disks)]
-Protoplanetary disc evolution and dispersal: the implications of X-ray photoevaporation
+Protoplanetary disc evolution and dispersal: the implications of X-ray photoevaporation.
 \end{workout}
 
-\begin{workout}[alpha prescription]
-$\vec{v}=(u_r,r\Omega)$, stress tensor $\sigma_{r\phi}=-\Sigma\exv{u_ru_{\phi}}$.
-Enhanced turbulent viscosity: $-\Sigma\exv{u_ru_{\phi}}=\Sigma\nu r\TDy{r}{\Omega}$, $\nu=v_TH$, $\alpha=v_T/c_s$
-\end{workout}
 
 \begin{workout}[Foto-evaporazione]
 (Photoevaporation: veras armitage 2003, Alexander13, Mordasini12. Internal/External).
@@ -166,8 +154,6 @@ On the snow line in dusty PPD (Sasselov lecar 99)
 Accretion disks around young object I: Detailed vertical structure (D'alessio Lizzano 98)
 \end{workout}
 
-
-
 \begin{workout}[YSO properties distro]
 Refs: ''Protoplanetary Disk Structures in Ophiuchus''
 da dove sono ricavete nei PPS?
@@ -182,7 +168,14 @@ Initial condition for planet formation (protoplanetry disk \cite{meyer2006format
 {Metallicity and Dust/Gas}
 $[M/H]$ distro modelled as normal: $\mu=-0.02$, $\sigma=0.22$ (photosphere of solar-like stars in solar neighborhood): Santos05.
 $f_{dg}=f_{dg,\odot}10\expy{[M/H]}$ with $f_{dg,\odot}=0.01-0.02$.
+\end{workout}
 
+\begin{workout}[Classificazione YSO: convenzioni]
+Sorgenti con SED declinante in mid infrared ($2.5-10\si{\micro\meter}$): $1.5<\alpha_{IR}=<0$. Active/passive: mass infall convert G into thermalradiation/reprocessed starlight.
+Refs: Perrymann 10.3 - disk formation pg 218 - 
+Classification based on slope of SED between $2-25\si{\micro\meter}$: $\alpha_{IR}=\TDly{\nu}{\nu F_{\nu}}=$ (Gail Hoppo 2010)
+Spitzer: forming regions within 500pc
+Formation: disk quickly forms as more distant material with high angular momentum, centrifugal radius $R(t)\propto\Omega^2 t^3$: . Class 0-I : protostellar disk, gravitational unstable (cloud collapse: the collapse of the cores of slowly rotating isothermal clouds, Terebey shu cassen 1984, selfsimilar collapse of isothermal spheres and star formation, shu 77). Singular isothermal sphere: $\rho=\frac{a^2}{2\pi G}r\expy{-2}$, $M(r)=\frac{2a^2}{G}r$
 \end{workout}
 
 \begin{workout}[Refs dischi protoplanetari]
@@ -192,14 +185,6 @@ williams cieza 11
 Andrews 09-10
 mamajek 2009 - Initial conditions of planet formation: lifetimes of primordial disks
 infrared excess: gail hoppe10
-\end{workout}
-
-\begin{workout}[Classificazione YSO: convenzioni]
-Sorgenti con SED declinante in mid infrared ($2.5-10\si{\micro\meter}$): $1.5<\alpha_{IR}=<0$. Active/passive: mass infall convert G into thermalradiation/reprocessed starlight.
-Refs: Perrymann 10.3 - disk formation pg 218 - 
-Classification based on slope of SED between $2-25\si{\micro\meter}$: $\alpha_{IR}=\TDly{\nu}{\nu F_{\nu}}=$ (Gail Hoppo 2010)
-Spitzer: forming regions within 500pc
-Formation: disk quickly forms as more distant material with high angular momentum, centrifugal radius $R(t)\propto\Omega^2 t^3$: . Class 0-I : protostellar disk, gravitational unstable (cloud collapse: the collapse of the cores of slowly rotating isothermal clouds, Terebey shu cassen 1984, selfsimilar collapse of isothermal spheres and star formation, shu 77). Singular isothermal sphere: $\rho=\frac{a^2}{2\pi G}r\expy{-2}$, $M(r)=\frac{2a^2}{G}r$
 \end{workout}
 
 
@@ -214,7 +199,7 @@ La correlazione tra metallicit\'a del disco protoplanetario e il numero di piane
 \end{workout}
 
 
-Il modello di formazione planetaria da me considerato, si basa sulla sedimentazione della componente polverosa nel disco protoplanetario in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario.
+Il modello di formazione planetaria si basa sulla sedimentazione della componente polverosa nel disco protoplanetario in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario.
 
 L'altro schema di formazione considera l'instabilit\'a gravitazionale del disco. 
 
@@ -480,6 +465,8 @@ Ormel 15/ Cimerman 17
 \end{workout}
 
 \section{Fase isolata}
+
+fonti energia: tidal heating radiogeninc heat, star flux
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Migrazione (e N-body interactions??)}
