--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -33,11 +33,16 @@ Densit\'a superficiale iniziale:
 4-Mordasini18 (Hayashi81). $p_g\approx1$ (Andrews10).
 \end{workout}
 
+\begin{workout}[disco protoplanetario: distribuzioni condizioni iniziali]
+
 Initial disk mass
 (infall phase end, no more self-gravitational instabilities) - stability(shu90), MMSN hayashi81/weidenshilling77, observations(Andrews10,Manara16) points to $(0.1-10)\%$ stellar mass, distro log-normal with mean $0.01M_*$.
 
 {Disk lifetime}
 $1-10My$ with mean $3My$ (Haisch01, Mamajek09)
+
+
+\end{workout}
 
 
 \section{Distribuzione iniziale planetesimi}
