bimodal radius distro not abservable

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -121,6 +121,10 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 
 La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a di rivelamento della tecnica/strumento particolari. Le osservazioni pi\'u numerose sono basate sull'osservazione della velocit\'a lungo la linea di vista dovuto al moto della stella attorno al baricentro del sistema stella pianeta (RV) o differenza nella luminosit\'a dovuto al transito del pianeta tra stella e osservatore (T).
 
+\begin{workout}[bimodal radius distro is observed by transit?]
+Characterization of exoplanets from their formation II. The planetary mass-radius relationship pg 21: bimodal radius distribution
+\end{workout}
+
 \begin{workout}[frequenza sistemi planetarii:doppler + transito]
 tab.1 mayor11(RV)
 tab.1: occurrence and architecture exoplanetary system 
