--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -74,6 +74,11 @@ auto gravitazione trascurabile quindi la struttura verticale \'e determinata dal
 \TDy{z}{P}=-rho g_z=-\frac{GM_*}{r^2+z^2}sin{\theta}\rho=-\Omega^2z
 \end{equation}
 
+\begin{workout}[Passive disks]
+(Refs: Ref: spectral energy distribution of T-Tauri star with passive circumstellar disk)
+Dust passively reirradiate star light
+\end{equation}
+
 \begin{workout}[Struttura verticale del disco, profilo termico]
 Pressione gas determinata da equilibrio idrostatico
 \end{workout}
@@ -135,6 +140,10 @@ EUV($E\approx13.6eV$): ionization, FUV($E\approx6-13.6eV$): dissociation, X-ray
 
 Le condizioni iniziali delle simulazioni di popolazioni planetaria sono determinate dalle osservazioni dei dischi protoplanetari.
 
+\begin{workout}[T Tauri SED more flattish]
+Ref: spectral energy distribution of T-Tauri star with passive circumstellar disk
+\end{workout}
+
 \begin{workout}[physical processes in protoplanetary disk: IRexcess, accretion rate and lifetime,]
 (armitage 17): fig 1, accretion rate and lifetime (2.2 pg 5-6), inference from dust continuum (disk mass, evidence for mm-particle growth
 Le stelle giovani sono caratterizzate da eccesso infrarosso fra \SIrange{2.5}{10}{\micro\meter}:
@@ -148,7 +157,16 @@ Spitzer: forming regions within 500pc
 Formation: disk quickly forms as more distant material with high angular momentum, centrifugal radius $R(t)\propto\Omega^2 t^3$: . Class 0-I : protostellar disk, gravitational unstable (cloud collapse: the collapse of the cores of slowly rotating isothermal clouds, Terebey shu cassen 1984, selfsimilar collapse of isothermal spheres and star formation, shu 77). Singular isothermal sphere: $\rho=\frac{a^2}{2\pi G}r\expy{-2}$, $M(r)=\frac{2a^2}{G}r$.
 \end{workout}
 
+\begin{workout}[disco protoplanetario: distribuzioni condizioni iniziali]
 
+Initial disk mass
+(infall phase end, no more self-gravitational instabilities) - stability(shu90), MMSN hayashi81/weidenshilling77, observations(Andrews10,Manara16) points to $(0.1-10)\%$ stellar mass, distro log-normal with mean $0.01M_*$.
+
+{Disk lifetime}
+$1-10My$ with mean $3My$ (Haisch01, Mamajek09)
+
+
+\end{workout}
 
 \begin{workout}[YSO: classificazione ]
 SED: emissine a lunghezze d'onda millimetriche probano tutto il volume del disco, otticamente sottile a quelle lunghezze (Beckwith 90, Beckwith Sargent91).
