--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -232,9 +232,15 @@ smaller planets tend to have lower e (hogg 10 raccomanded modelling e distro on 
 Local maximum at $1\mjupiter{}$, flat distro in log(r) between $4-10\mearth{}$ below strong increase, at $1.7\mearth{}$ local minimum separating super-earth from sub-neptune
 \end{workout}
 
+
+\begin{workout}[planet model: relazione massa-raggio]
+
+\end{workout}
+
 \begin{figure}[!ht]
 \includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}
 \end{figure}
+
 
 \begin{workout}[transit distro observed refs]
 Refs:Mthods of detecting exoplanets (radius distro: pg 136)
