toward meter bodies

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -77,7 +77,7 @@ auto gravitazione trascurabile quindi la struttura verticale \'e determinata dal
 \begin{workout}[Passive disks]
 (Refs: Ref: spectral energy distribution of T-Tauri star with passive circumstellar disk)
 Dust passively reirradiate star light
-\end{equation}
+\end{workout}
 
 \begin{workout}[Struttura verticale del disco, profilo termico]
 Pressione gas determinata da equilibrio idrostatico
@@ -238,15 +238,19 @@ La correlazione tra metallicit\'a del disco protoplanetario e il numero di piane
 \end{workout}
 
 
-Il modello di formazione planetaria si basa sulla sedimentazione della componente polverosa nel disco protoplanetario in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario.
+Lo schema di core accretion (CA) prevede la coagulazione della componente polverosa in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario.
 
-L'altro schema di formazione considera l'instabilit\'a gravitazionale del disco. 
+Lo schema di formazione considera l'instabilit\'a gravitazionale del disco.
 
-Esistono alcuni dati osservativi in favore del primo modello, considerando il sistema solare: arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli (la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli), ipotizzando una rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metllica, \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore, non spiega la formazione dei corpi minori.
+Esistono alcuni dati osservativi in favore del primo modello, considerando il sistema solare: arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli (la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $\cel{He}{}{}{}$ contenuto in pianeta di composizione solare con pari massa di metalli), ipotizzando una rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metllica, \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore, non spiega la formazione dei corpi minori.
 
 \section{Sedimentazione polvere e formazione planetesimi}
 
-Si ha la condensazione della polvere in corpi dominati da autogravitazione, in \SIrange{e4}{e5}{\year}.
+Per passare a corpi di dimensioni kilometriche si ipotizzano 2 scenarii:
+\begin{itemize}
+\item La componente solida del disco di accrescimento sedimenta rapidamente in disco sottile: secondo il modello di Goldreich-Ward il disco di polvere \'e instabile e le condensazioni generano i planetesimi.
+\item In assenza di sedimentazione la formazione procede tramite urti a 2 corpi e la turbolenza creando addensamenti, pu\'o accelerare la formazione di planetesimi.
+\end{itemize}
 
 L'equazione del moto per particella di polvere \'e
 \begin{equation}
@@ -261,19 +265,13 @@ Grani piccoli raggiungono rapidamente la velocit\'a stazionaria di regime
 \begin{equation}
 v_{set}=\frac{\Omega^2}{v_{th}}\frac{\rho_d}{\rho_g(z)}sz
 \end{equation}
-La formula precedente prevede sedimentazione per particella mm in 100: risultano evidenze contrarie dalle osservezioni.
+La formula precedente prevede sedimentazione per particella mm in 100: risultano evidenze contrarie dalle osservezioni. Si ha la condensazione della polvere in corpi dominati da autogravitazione, in \SIrange{e4}{e5}{\year}.
 
 Inoltre l'eventuale scambio di momento tra gas e polvere dovuto alla velocit\'a di rotazione minore di quella kepleriana del gas:
 \begin{equation}
 g_{eff}=-\frac{GM_*}{r^2}-(\frac{1}{\rho_g}\TDy{r}{P}=r\Omega_g^2
 \end{equation}
 $\Omega_g$ \'e $\approx0.5\%$ di quella kepleriana.
-
-Per passare a corpi di dimensioni kilometriche si ipotizzano 2 scenarii:
-\begin{itemize}
-\item La componente solida del disco di accrescimento sedimenta rapidamente in disco sottile: secondo il modello di Goldreich-Ward il disco di polvere \'e instabile e le condensazioni generano i planetesimi.
-\item In assenza di sedimentazione la formazione procede tramite urti a 2 corpi e la turbolenza creando addensamenti, pu\'o accelerare la formazione di planetesimi.
-\end{itemize}
 
 \begin{workout}[Dust settling model]
 Furlan 06: Effects of dust growth and settling in T Tauri disks
