initD fig/thumb up obsfor CA

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -165,6 +165,7 @@ Initial disk mass
 {Disk lifetime}
 $1-10My$ with mean $3My$ (Haisch01, Mamajek09)
 
+\begin{figure}[!ht]\includegraphics[keepaspectratio,width=\textwidth]{initdistro}\label{fig:initdistro}\caption{Da \cite{mordasini2018planetary}.}\end{figure}
 
 \end{workout}
 
@@ -242,7 +243,13 @@ Il modello di formazione planetaria si basa sulla sedimentazione della component
 
 L'altro schema di formazione considera l'instabilit\'a gravitazionale del disco. 
 
-Esistono alcuni dati osservativi in favore del primo modello, considerando il sistema solare: arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli (la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli), ipotizzando una rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metllica, \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore, non spiega la formazione dei corpi minori.
+Esistono alcuni dati osservativi in favore del primo modello:
+\begin{itemize}
+\item arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli (la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli)
+\item ipotizzando una successiva rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metallica
+\item \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore
+\item non spiega la formazione dei corpi minori
+\end{itemize}
 
 \section{Sedimentazione polvere e formazione planetesimi}
 
