--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -253,34 +253,47 @@ Esistono alcuni dati osservativi in favore del primo modello:
 
 \section{Sedimentazione polvere e formazione planetesimi}
 
+La polvere presente nel materiale interstellare ha dimensioni di \SI{0.1}{\micro\meter} sedimenta verso il centro del disco:
+
+$F_D$ \'e la forza esercitata dal gas sulla particella di polvere
+\begin{equation}
+F_D=-\frac{1}{2}C_D\pi s^2\rho_gv^2
+\end{equation}
+nel caso cammino libero medio delle molecole di gas sia maggiore delle dimensioni della particella $C_D=\frac{8}{3}\frac{v_{th}}{v}$ (Epstein drag) per particelle pi\'u grandi \'e funzione del numero di Reynold.
+
+L'equazione del moto per particella di polvere \'e
+\begin{equation}
+m_p\TDy{t}{v_z}=F_D-m_p\Omega^2z
+\end{equation}
+che risulta in condizioni stazionarie
+\begin{equation}
+v_{set}=\frac{\Omega^2}{v_{th}}\frac{\rho_d}{\rho_g(z)}sz
+\end{equation}
+Per particelle di \SI{1}{\micro\meter} tempo di sedimentazione \'e $\SI{2e5}{\year}$.
+Inoltre turbolenza e coagulazione delle particelle hanno un ruolo non banale.
+%t=mv/F
+Inoltre la velocit\'a relativa tra gas e polvere causa un drift verso la stella massimo per particelle di \SIrange{0.01}{10}{\meter}  a \SI{1}{\astronomicalunit} per cui si deve avere rapida crescita oltre \SI{10}{\meter}.
+
 Per passare a corpi di dimensioni kilometriche si ipotizzano 2 scenarii:
 \begin{itemize}
 \item La componente solida del disco di accrescimento sedimenta rapidamente in disco sottile: secondo il modello di Goldreich-Ward il disco di polvere \'e instabile e le condensazioni generano i planetesimi.
 \item In assenza di sedimentazione la formazione procede tramite urti a 2 corpi e la turbolenza creando addensamenti, pu\'o accelerare la formazione di planetesimi.
 \end{itemize}
 
-L'equazione del moto per particella di polvere \'e
-\begin{equation}
-m_p\TDy{t}{v_z}=F_D-m_p\Omega^2z
-\end{equation}
-$F_D$ \'e la forza esercitata dal gas sulla particella di polvere
-\begin{equation}
-F_D=-\frac{1}{2}C_D\pi s^2\rho_gv^2
-\end{equation}
-nel caso cammino libero medio delle molecole di gas sia maggiore delle dimensioni della particella $C_D=\frac{8}{3}\frac{v_{th}}{v}$ (Epstein drag).
+\begin{workout}[refs planetesimal formation]
+Armitage 07: lecture notes on formation and early evolution
+ \end{workout}
+
+\begin{workout}[Velocit\'a sedimentazione stzionaria]	
 Grani piccoli raggiungono rapidamente la velocit\'a stazionaria di regime
 \begin{equation}
 v_{set}=\frac{\Omega^2}{v_{th}}\frac{\rho_d}{\rho_g(z)}sz
 \end{equation}
-La formula precedente prevede sedimentazione per particella mm in 100: risultano evidenze contrarie dalle osservezioni. Si ha la condensazione della polvere in corpi dominati da autogravitazione, in \SIrange{e4}{e5}{\year}.
-
-Inoltre l'eventuale scambio di momento tra gas e polvere dovuto alla velocit\'a di rotazione minore di quella kepleriana del gas:
-\begin{equation}
-g_{eff}=-\frac{GM_*}{r^2}-(\frac{1}{\rho_g}\TDy{r}{P}=r\Omega_g^2
-\end{equation}
-$\Omega_g$ \'e $\approx0.5\%$ di quella kepleriana.
-
+ \end{workout}
+ 
 \begin{workout}[Dust settling model]
+weidenschilling 89: dust settling time
+Dullemond dominique 04, johansen klahr 05, carballido 05, fromand papaloizou 06, turner 06,07
 Furlan 06: Effects of dust growth and settling in T Tauri disks
 Nomura 06: Dust Size Growth and Settling in a Protoplanetary Disk
 \cite{lissauer1993planet}
