--- a/seminario.bib
+++ b/seminario.bib
@@ -119,3 +119,10 @@ pages={1282},
   journal={arXiv preprint arXiv:1109.2497},
   year={2011}
 }
+
+@book{perryman2011exoplanet,
+  title={The exoplanet handbook},
+  author={Perryman, Michael},
+  year={2011},
+  publisher={Cambridge University Press}
+}
